--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,10 +1,11 @@
-/* Global styles 
-body {
-    font-family: Helvetica, sans-serif;
-    background-color: #f0f0f0;
-    margin: 0;
-    padding: 0;
-}
+/* body {
+    background-image: url('mainframe_background.jpg'); /* Replace with the actual path to your image 
+    background-size: cover;
+    background-repeat: no-repeat;
+    /* Other styles for the body element 
+    font-family: Arial, sans-serif;
+    color: #333;
+} 
 
 /* CSS styles for chart containers */
 /*.chart-container {
@@ -15,3 +16,29 @@ body {
     box-shadow: 0 0 5px rgb(251, 251, 251);
     border-radius: 20px;
 }
+/* Reset default margin and padding for all elements */
+p {
+    font-family: 'Helvetica', sans-serif;
+    font-style: Light;
+  }
+  h1 {
+    font-weight: lighter; /* Set the font weight to normal (regular) */
+  }
+  /* Apply background color */
+  body {
+     /* Replace with the actual path to your image file */
+    /*background-image: url('mainframe_background.jpg');*/
+    background-color: rgb(225, 227, 227);
+    background-size: cover; /* Adjust as needed */
+    background-repeat: no-repeat; /* Optional, prevents image repetition */
+  }
+  /* Style the jumbotron */
+  .jumbotron {
+    background-color: #176ba0; /* Blue background */
+    color: #fff; /* White text color */
+    padding: 20px;
+    border-radius: 5px;
+  }
+  
+
+  
